--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
 
+### Code ###
+# Visual Studio Code - https://code.visualstudio.com/
+.settings/
+.vscode/
+tsconfig.json
+jsconfig.json
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
