--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
+appdirs==1.4.3
+astroid==2.0.4
+attrs==18.2.0
+black==18.9b0
+Click==7.0
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 numpy==1.15.3
 paho-mqtt==1.4.0
 pandas==0.23.4
+pylint==2.1.1
+pymongo==3.7.2
 python-dateutil==2.7.5
 pytz==2018.7
 six==1.11.0
+toml==0.10.0
+typed-ast==1.1.0
+wrapt==1.10.11
