Sync fog -> cloud; Better logging; REST service with configuration

--- a/middleware/middleware.ini
+++ b/middleware/middleware.ini
@@ -1,2 +1,21 @@
 [middleware]
 broker_host = localhost
+
+[fog_storage_mongodb]
+host = localhost
+port = 27017
+database = fog
+table = enviot
+
+[cloud_storage_mongodb]
+from_host = localhost
+from_port = 27017
+from_database = fog
+from_table = enviot
+
+to_host = localhost
+to_port = 27017
+to_database = cloud
+to_table = enviot
+
+batch_size = 3
